# cacophony

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  appveyor.yml  readme.md
dependencies/: CMakeLists.txt  fetch_cimg.cmake  fetch_json.cmake  fetch_zacc.cmake
examples/: CMakeLists.txt  granite.json  planet.json
include/: CMakeLists.txt  branch_entrypoint.h  cacophony.hpp  libcacophony.hpp
include/models/: primitives.hpp
include/modules/: all.hpp  dependencies.h  dependencies.hpp  module_base.hpp
include/modules/caching/: buffer.hpp  cache.h  cache.hpp
include/modules/compute/: terrain_steepness.hpp
include/modules/generators/: billow.hpp  perlin.hpp  primitives.hpp  ridgedmultifrac.h  ridgedmultifrac.hpp  voronoi.hpp
include/modules/modifiers/: curve.h  curve.hpp  displace.h  displace.hpp  primitives.hpp  rotate.h  rotate.hpp  select.h  select.hpp  terrace.h  terrace.hpp  turbulence.hpp
include/noise/: noisegenerators.hpp  random_vector_repository.hpp  vectortable.hpp
include/platform/: all.hpp  cacophony_branch_entrypoint.hpp  dependencies.h  dependencies.hpp  platform.h
include/platform/compilers/: compiler.hpp  compiler_base.h  compiler_base.hpp  compiler_errors.hpp  compiler_v09.h
include/platform/engine/: engine.hpp  engine_base.hpp  simd_engine.hpp
include/platform/scheduling/: cpu_scheduler.hpp  scheduler.h  scheduler.hpp  scheduler_base.h  scheduler_base.hpp  scheduler_config.hpp
include/util/: cloneable.h  color.h
libnoise++/: libnoise++.sln
libnoise++/Debug/: UnitTest.exp  UnitTest.ilk  UnitTest.lib
libnoise++/UnitTest/: TestInterpolation.cpp  TestModules.cpp  TestNoise.cpp  UnitTest.vcxproj  UnitTest.vcxproj.filters  util.h
libnoise++/libnoise++/: basetypes.h  interpolation.h  intrinsic.h  libnoise++.vcxproj  libnoise++.vcxproj.filters  noisegenerators.h  vector.h  vectortable.h
libnoise++/libnoise++/intrinsic/: base.h  m128d.h  m128f.h  m128i.h  m256d.h  m256f.h  m256i.h
libnoise++/libnoise++/modules/: billow.h  curve.h  modules.h  perlin.h  ridgedmultifrac.h  rotate.h  select.h  (+1 more)
libnoise++/unitycompat/: Class1.cs
paranoise/: paranoise.sln  readme.md
paranoise/Examples/: Examples.cpp  Examples.vcxproj  Examples.vcxproj.filters  granite.h  granite.json  json.h  perlin_test.json  planet.h  planet.json  run.h  wood.h
paranoise/Test/: Test.rsproj
paranoise/UnitTest/: TestFastloadConstants.cpp  TestInterpolation.cpp  TestModules.cpp  TestNoise.cpp  TestOperations.cpp  UnitTest.vcxproj  UnitTest.vcxproj.filters  util.h
paranoise/libnoisecompat/: libnoisecompat.vcxproj
paranoise/paranoise/: base.h  basetypes.h  capabilities.h  capabiliy.h  color.h  constants.h  generic_operators.h  interpolation.h  mapper.h  noisegenerators.h  paranoise.vcxproj  paranoise.vcxproj.filters  scheduler.h  vector.h  vectortable.h
paranoise/paranoiselib/: ReadMe.txt  paranoiselib.cpp  paranoiselib.h  paranoiselib.vcxproj  paranoiselib.vcxproj.filters  stdafx.cpp
paranoise/unitycompat/: unitycompat.csproj
solowej/: CMakeLists.txt  locstat.ps1  solowej.h  solowej.sln
solowej-examples/: CMakeLists.txt  run.h  solowej-examples.cpp
solowej-examples/config/: planet.json
solowej-test/: CMakeLists.txt  test_compiler.cpp  test_gather_randoms.cpp  test_interpolation.cpp  test_modules.cpp  test_noise.cpp  unit_test.cpp
solowej/Examples/: Examples.vcxproj  Examples.vcxproj.filters  planet.json
solowej/UnitTest/: TestInterpolation.cpp  TestModules.cpp  TestNoise.cpp  TestOperations.i-a8adcb6d  UnitTest.vcxproj  UnitTest.vcxproj.filters  stdafx.h
solowej/engine/: compiler.h  dependencies.h  engine.h  engine_base.h  scheduler.h  scheduler_base.h  simd_engine.h  specialized_simd_engines.h
solowej/engine/compilers/: compiler_base.h  compiler_v09.h
solowej/math/: base.h  interpolation.h  vector.h
solowej/models/: primitives.h
solowej/modules/: dependencies.h  module_base.h
solowej/modules/caching/: buffer.h
solowej/modules/compute/: terrain_steepness.h
solowej/modules/generators/: perlin.h  primitives.h  voronoi.h
solowej/modules/modifiers/: curve.h  displace.h  primitives.h  rotate.h  terrace.h  turbulence.h
solowej/noise/: noisegenerators.h  vectortable.h
solowej/platform/: engine_base.h  simd_engine.cpp  simd_engine.h
solowej/platform/compilers/: compiler.h  compiler_base.h  compiler_v09.h
solowej/platform/engine/: engine.cpp  engine.h  engine_base.h
solowej/platform/scheduling/: cpu_scheduler_mt.h  cpu_scheduler_st.h  scheduler.h  scheduler_base.h
solowej/solowej/: CMakeLists.txt  solowej.vcxproj  solowej.vcxproj.filters
solowej/solowej-examples/: CMakeLists.txt  Examples.cpp  granite.h  json.h  planet.h  run.h  solowej-examples.cpp  wood.h
solowej/solowej-examples/config/: perlin_test.json  planet.json
solowej/solowej-test/: CMakeLists.txt  test_compiler.cpp  test_gather_randoms.cpp  test_interpolation.cpp  test_modules.cpp  test_noise.cpp  unit_test.cpp
solowej/solowej/engine/: all.h  compiler.h  dependencies.h  engine.h  scheduler.h  scheduler_base.h  simd_engine.h  specialized_simd_engines.h
solowej/solowej/math/: interpolation.h  matrix.h  vector.h
solowej/solowej/models/: primitives.h
solowej/solowej/modules/: all.h  dependencies.h  module_base.h
solowej/solowej/modules/caching/: buffer.h  cache.h
solowej/solowej/modules/generators/: billow.h  perlin.h  primitives.h  ridgedmultifrac.h  voronoi.h
solowej/solowej/modules/modifiers/: curve.h  displace.h  primitives.h  rotate.h  select.h  terrace.h  turbulence.h
solowej/solowej/noise/: noisegenerators.h  vectortable.h
solowej/solowej/util/: cloneable.h  color.h  serializable.h  string.h
solowej/submodules/CImg/html/: header.html  header_reference.html
solowej/submodules/CImg/plugins/: chlpca.h
solowej/submodules/json/: appveyor.yml
solowej/util/: serializable.h
src/: CMakeLists.txt  branch_entrypoint.cpp  cacophony_branch_entrypoint.cpp  cacophony_examples.cpp  examples.cpp  libcacophony.cpp
test/: CMakeLists.txt  test_compiler.cpp  test_gather_randoms.cpp  test_interpolation.cpp  test_modules.cpp  test_noise.cpp
(+56 files in other folders)
